[tool.poetry]
name = "library-books"
version = "0.1.0"
description = ""
authors = ["ScorP14"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
ipython = "^8.26.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
